crates/escalier_old_parser/src/snapshots/escalier_parser__tests__type_annotations-3.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let add = (a: number, b: number): number => a + b;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 50,
                    },
                },
                span: 0..50,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                            span: 4..7,
                            kind: Ident(
                                BindingIdent {
                                    name: "add",
                                    mutable: false,
                                    span: 4..7,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 49,
                                    },
                                },
                                span: 10..49,
                                kind: Lambda(
                                    Lambda {
                                        params: [
                                            EFnParam {
                                                pat: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 11,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                    },
                                                    span: 11..12,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "a",
                                                            mutable: false,
                                                            span: 11..12,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 11,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 12,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                type_ann: Some(
                                                    TypeAnn {
                                                        kind: Keyword(
                                                            KeywordType {
                                                                keyword: Number,
                                                            },
                                                        ),
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 14,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 20,
                                                            },
                                                        },
                                                        span: 14..20,
                                                        inferred_type: None,
                                                    },
                                                ),
                                                optional: false,
                                            },
                                            EFnParam {
                                                pat: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 22,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 23,
                                                        },
                                                    },
                                                    span: 22..23,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "b",
                                                            mutable: false,
                                                            span: 22..23,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 22,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 23,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                type_ann: Some(
                                                    TypeAnn {
                                                        kind: Keyword(
                                                            KeywordType {
                                                                keyword: Number,
                                                            },
                                                        ),
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 25,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 31,
                                                            },
                                                        },
                                                        span: 25..31,
                                                        inferred_type: None,
                                                    },
                                                ),
                                                optional: false,
                                            },
                                        ],
                                        body: Expr(
                                            Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 44,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 49,
                                                    },
                                                },
                                                span: 44..49,
                                                kind: BinaryExpr(
                                                    BinaryExpr {
                                                        op: Add,
                                                        left: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 44,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 45,
                                                                },
                                                            },
                                                            span: 44..45,
                                                            kind: Ident(
                                                                Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 44,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 45,
                                                                        },
                                                                    },
                                                                    span: 44..45,
                                                                    name: "a",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        right: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 48,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 49,
                                                                },
                                                            },
                                                            span: 48..49,
                                                            kind: Ident(
                                                                Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 48,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 49,
                                                                        },
                                                                    },
                                                                    span: 48..49,
                                                                    name: "b",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        is_async: false,
                                        return_type: Some(
                                            TypeAnn {
                                                kind: Keyword(
                                                    KeywordType {
                                                        keyword: Number,
                                                    },
                                                ),
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 34,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 40,
                                                    },
                                                },
                                                span: 34..40,
                                                inferred_type: None,
                                            },
                                        ),
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
